<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SettingsFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_5dp"
        android:text="@string/general"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/dimen_15dp"
        />

    <RelativeLayout
        android:id="@+id/reQuality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_15dp">

        <LinearLayout
            android:id="@+id/layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_circle"
            android:layout_centerVertical="true"
            android:padding="9dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_share_black_24dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/scQuality"
            android:layout_toEndOf="@+id/layout_image"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:orientation="vertical">

            <TextView
                style="@style/SettingsTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality"
                android:gravity="end"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality_summery"
                style="@style/HintTextViewStyle"
                android:gravity="end"
                android:layout_marginTop="2dp"/>

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/scQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_10dp" />


    </RelativeLayout>

</LinearLayout>