<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:src="@drawable/bottom_sheet_top_bar"
        app:tint="?imageTint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_sheet"
        android:backgroundTint="?cardBackground"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/font_16"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:text="@string/more"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/font_16"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:scrollHorizontally="true"
            android:textColor="?textColor"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:background="?divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <RelativeLayout

                android:id="@+id/shareLayout"
                style="@style/bs_linearlayout_holder_style"
                >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share_black_24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    app:tint="?imageTint" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/image"
                    android:layout_marginHorizontal="@dimen/dimen_24dp"
                    android:textColor="?textColor"
                    />

            </RelativeLayout>

            <RelativeLayout

                android:id="@+id/detailLayout"
                style="@style/bs_linearlayout_holder_style"
                >

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info_black_24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    app:tint="?imageTint" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textSize="@dimen/font_16"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/image1"
                    android:layout_marginHorizontal="@dimen/dimen_24dp"
                    android:textColor="?textColor"
                    />
            </RelativeLayout>

            <RelativeLayout

                android:id="@+id/favouriteLayout"
                style="@style/bs_linearlayout_holder_style"
                >

                <ImageView
                    android:id="@+id/imageFavourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favourite_border_black_24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    app:tint="?imageTint" />
                <TextView
                    android:id="@+id/tvFavourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite"
                    android:textSize="@dimen/font_16"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageFavourite"
                    android:layout_marginHorizontal="@dimen/dimen_24dp"
                    android:textColor="?textColor"
                    />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
