<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewPdfActivity"
    android:background="?background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scrollView"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/tool"
                layout="@layout/toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/swipeLayout"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/swipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_swipe_up_black_24dp"
                    app:tint="?imageTint" />

                <TextView
                    android:id="@+id/tvSwipe"
                    style="@style/BottomNavigationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:text="@string/swipe_vertical"
                     />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jumpPageLayout"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_find_in_page_black_24dp"
                    app:tint="?imageTint"/>

                <TextView
                    style="@style/BottomNavigationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:text="@string/jump_page_title"
                     />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/favouriteLayout"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/favourite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_favourite_border_black_24dp"
                    app:tint="?imageTint"/>

                <TextView
                    style="@style/BottomNavigationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:text="@string/favourite"
                     />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lightModeLayout"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/lightModeImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_light_mode_black_24dp"
                    app:tint="?imageTint"/>

                <TextView
                    android:id="@+id/tvMode"
                    style="@style/BottomNavigationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:text="@string/light_mode"
                     />

            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/pageCountLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/scrollView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:background="@drawable/circle_background">

            <TextView
                android:id="@+id/pageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:text="1/1"
                android:textColor="@color/black"/>
        </LinearLayout>
</RelativeLayout>